--- a/FrontEnd/html/LoginClient.html
+++ b/FrontEnd/html/LoginClient.html
@@ -6,16 +6,18 @@
   <title>Đăng nhập</title>
   <!-- Link đến file CSS -->
   <link rel="stylesheet" href="../css/LoginClient.css">
+  <script src="../javaScript/CheckLoginClient.js"></script>
 </head>
 
 <body>
   <div class="login-container">
     <h2>Đăng nhập</h2>
     <form>
-      <input type="text" placeholder="Tên đăng nhập" required>
-      <input type="password" placeholder="Mật khẩu" required>
-      <button type="submit">Đăng nhập</button>
+      <input type="text" id="username" placeholder="Tên đăng nhập" required>
+      <input type="password" id="password" placeholder="Mật khẩu" required>
+      <button type="submit" onclick="login(event)">Đăng nhập</button>
     </form>
+    <p id="error-msg"></p>
     <p>Chưa có tài khoản? <a href="#">Đăng ký</a></p>
   </div>
 </body>
