them section one

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ThanhGiangShop.com</title>
+    <!-- link icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="../css/Home_header.css">
     <link rel="stylesheet" href="../css/Home_section_one.css">
-    <link rel="stylesheet" href="../css/Home_slide.css">
-    <script src="../javascript/Home_slide.js"></script>
+    <script src="../javascript/Home.js"></script>
 </head>
 <body>
 
@@ -71,23 +71,17 @@
       </div>
 
       <div class="section-one-right">
-        <div class="slider">
-          <div class="slides">
-              <img src="../images/1.png" alt="iPhone 17">
-              <img src="../images/1.png" alt="Galaxy S25">
-              <img src="" alt="AirPods Pro 3">
-              <img src="" alt="Xiaomi 15T">
-              <img src="" alt="Asus Vivobook">
+        <div class="slider-controls">
+            <button id="prev-slide" class="slider-btn"><i class="fa fa-chevron-left"></i></button>
+            <button id="next-slide" class="slider-btn"><i class="fa fa-chevron-right"></i></button>
           </div>
-
-        <div class="slide-names">
-            <span>IPHONE 17 SERIES</span>
-            <span>GALAXY S25 FE</span>
-            <span>AIRPODS PRO 3</span>
-            <span>XIAOMI 15T SERIES</span>
-            <span>ASUS VIVOBOOK</span>
-        </div>
-      </div>
+          <div class="list-slides">
+              <img src="../images/slide1.png" alt="iPhone 17">
+              <img src="../images/slide2.png" alt="Galaxy S25">
+              <img src="../images/slide3.png" alt="AirPods Pro 3">
+              <img src="../images/slide4.png" alt="Xiaomi 15T">
+              <img src="../images/slide5.png" alt="Asus Vivobook">
+          </div>
       </div>
     </div>
   </div>
