--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="../css/Home_header.css">
     <link rel="stylesheet" href="../css/Home_section_one.css">
+    <link rel="stylesheet" href="../css/Home_section_two.css">
     <script src="../javascript/Home.js"></script>
 </head>
 <body>
@@ -84,6 +85,30 @@
           </div>
       </div>
     </div>
+  </div>
+
+
+  <div class="section-two">
+    <div class="top">
+      <div class="top-content">ĐIỆN THOẠI NỔI BẬT</div>
+      <div class="top-list">
+        <a href="">Apple</a>
+        <a href="">Samsung</a>
+        <a href="">Xiaomi</a>
+        <a href="">Vivo</a>
+        <a href="">Realme</a>
+        <a href="">Asus</a>
+        <a href="">Nokia</a>
+        <a href="">Nothing</a>
+        <a href="">All</a>
+      </div>
+    </div>
+
+    <div class="content">
+
+    </div>
+
+
   </div>
 
 </body>
