them danh sach san pham

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -87,7 +87,6 @@
     </div>
   </div>
 
-
   <div class="section-two">
     <div class="top">
       <div class="top-content">ĐIỆN THOẠI NỔI BẬT</div>
@@ -104,10 +103,86 @@
       </div>
     </div>
 
-    <div class="content">
 
+    <div class="list-products">
+      <!-- 1 -->
+      <div class="product">
+        <div class="branch_product">Iphone</div>
+        <a href="">
+        <img id="image_product" src="../images/1.png" alt="sp1">
+        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
+        <div  class="product-describe">
+          <div class="product-describe-button">6.9 inches</div>
+          <div class="product-describe-button">8 GB</div>
+          <div class="product-describe-button"> 156 GB</div>
+        </div>
+        <div class="product-price">33.990.000₫</div>
+      </a>
+      <button id="add-cart">Thêm vào giỏ hàng</button>
+      </div>
+<!-- 2 -->
+      <div class="product">
+        <div class="branch_product">Iphone</div>
+        <a href="">
+        <img id="image_product" src="../images/1.png" alt="sp1">
+        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
+        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
+          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div class="product-price">33.990.000₫</div>
+      </a>
+      <button id="add-cart">Thêm vào giỏ hàng</button>
+      </div>
+
+<!-- 3 -->
+      <div class="product">
+        <div class="branch_product">Iphone</div>
+        <a href="">
+        <img id="image_product" src="../images/1.png" alt="sp1">
+        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
+        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
+          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div class="product-price">33.990.000₫</div>
+      </a>
+      <button id="add-cart">Thêm vào giỏ hàng</button>
+      </div>
+<!-- 4 -->
+      <div class="product">
+        <div class="branch_product">Iphone</div>
+        <a href="">
+        <img id="image_product" src="../images/1.png" alt="sp1">
+        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
+        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
+          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div class="product-price">33.990.000₫</div>
+      </a>
+      <button id="add-cart">Thêm vào giỏ hàng</button>
+      </div>
+<!-- 5 -->
+      <div class="product">
+        <div class="branch_product">Iphone</div>
+        <a href="">
+        <img id="image_product" src="../images/1.png" alt="sp1">
+        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
+        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
+          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div class="product-price">33.990.000₫</div>
+      </a>
+      <button id="add-cart">Thêm vào giỏ hàng</button>
+      </div>
+
+<!-- 6 -->
+     <div class="product">
+        <div class="branch_product">Iphone</div>
+        <a href="">
+        <img id="image_product" src="../images/1.png" alt="sp1">
+        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
+        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
+          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div class="product-price">33.990.000₫</div>
+      </a>
+      <button id="add-cart">Thêm vào giỏ hàng</button>
+      </div>
     </div>
-
 
   </div>
 
