--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -66,9 +66,9 @@
   <div class="section-one">
     <div class="section-one-content">
       <div class="section-one-left">
-        <img src="../images/section_one_img1.png" alt="anh1">
-        <img src="../images/section_one_img2.png" alt="anh2">
-        <img src="../images/section_one_img3.png" alt="anh3">
+        <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/s25-0925-1.png" alt="anh1">
+        <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/watch11-right.png" alt="anh2">
+        <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:10/plain/https://dashboard.cellphones.com.vn/storage/Camp-laptop-T9_Right-banner-1.png" alt="anh3">
       </div>
 
       <div class="section-one-right">
@@ -77,7 +77,7 @@
             <button id="next-slide" class="slider-btn"><i class="fa fa-chevron-right"></i></button>
           </div>
           <div class="list-slides">
-              <img src="../images/slide1.png" alt="iPhone 17">
+              <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_Home_iPhone_17_%20Pro_Opensale_v2.png" alt="iPhone 17">
               <img src="../images/slide2.png" alt="Galaxy S25">
               <img src="../images/slide3.png" alt="AirPods Pro 3">
               <img src="../images/slide4.png" alt="Xiaomi 15T">
@@ -109,78 +109,111 @@
       <div class="product">
         <div class="branch_product">Iphone</div>
         <a href="">
-        <img id="image_product" src="../images/1.png" alt="sp1">
+        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
         <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
         <div  class="product-describe">
           <div class="product-describe-button">6.9 inches</div>
           <div class="product-describe-button">8 GB</div>
           <div class="product-describe-button"> 156 GB</div>
         </div>
+        <div class="product-desscribe-text">
+          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
+        </div>
         <div class="product-price">33.990.000₫</div>
       </a>
-      <button id="add-cart">Thêm vào giỏ hàng</button>
+      <button id="Phone" class ="product-phone">Xem thêm</button>
       </div>
 <!-- 2 -->
       <div class="product">
         <div class="branch_product">Iphone</div>
         <a href="">
-        <img id="image_product" src="../images/1.png" alt="sp1">
+        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
         <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
-          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div  class="product-describe">
+          <div class="product-describe-button">6.9 inches</div>
+          <div class="product-describe-button">8 GB</div>
+          <div class="product-describe-button"> 156 GB</div>
+        </div>
+        <div class="product-desscribe-text">
+          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
+        </div>
         <div class="product-price">33.990.000₫</div>
       </a>
-      <button id="add-cart">Thêm vào giỏ hàng</button>
+      <button id="Phone" class ="product-phone">Xem thêm</button>
       </div>
 
 <!-- 3 -->
       <div class="product">
         <div class="branch_product">Iphone</div>
         <a href="">
-        <img id="image_product" src="../images/1.png" alt="sp1">
+        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
         <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
-          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div  class="product-describe">
+          <div class="product-describe-button">6.9 inches</div>
+          <div class="product-describe-button">8 GB</div>
+          <div class="product-describe-button"> 156 GB</div>
+        </div>
+        <div class="product-desscribe-text">
+          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
+        </div>
         <div class="product-price">33.990.000₫</div>
       </a>
-      <button id="add-cart">Thêm vào giỏ hàng</button>
+      <button id="Phone" class ="product-phone">Xem thêm</button>
       </div>
 <!-- 4 -->
       <div class="product">
         <div class="branch_product">Iphone</div>
         <a href="">
-        <img id="image_product" src="../images/1.png" alt="sp1">
+        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
         <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
-          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div  class="product-describe">
+          <div class="product-describe-button">6.9 inches</div>
+          <div class="product-describe-button">8 GB</div>
+          <div class="product-describe-button"> 156 GB</div>
+        </div>
+        <div class="product-desscribe-text">
+          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
+        </div>
         <div class="product-price">33.990.000₫</div>
       </a>
-      <button id="add-cart">Thêm vào giỏ hàng</button>
+      <button id="Phone" class ="product-phone">Xem thêm</button>
       </div>
 <!-- 5 -->
       <div class="product">
         <div class="branch_product">Iphone</div>
         <a href="">
-        <img id="image_product" src="../images/1.png" alt="sp1">
+        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
         <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
-          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div  class="product-describe">
+          <div class="product-describe-button">6.9 inches</div>
+          <div class="product-describe-button">8 GB</div>
+          <div class="product-describe-button"> 156 GB</div>
+        </div>
+        <div class="product-desscribe-text">
+          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
+        </div>
         <div class="product-price">33.990.000₫</div>
       </a>
-      <button id="add-cart">Thêm vào giỏ hàng</button>
+      <button id="Phone" class ="product-phone">Xem thêm</button>
       </div>
 
 <!-- 6 -->
-     <div class="product">
+    <div class="product">
         <div class="branch_product">Iphone</div>
         <a href="">
-        <img id="image_product" src="../images/1.png" alt="sp1">
+        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
         <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">Chế độ Điện ảnh và ổn định hình ảnh dịch chuyển cảm biến,<br>
-          pin dùng cả ngày, màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới</div>
+        <div  class="product-describe">
+          <div class="product-describe-button">6.9 inches</div>
+          <div class="product-describe-button">8 GB</div>
+          <div class="product-describe-button"> 156 GB</div>
+        </div>
+        <div class="product-desscribe-text">
+          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
+        </div>
         <div class="product-price">33.990.000₫</div>
       </a>
-      <button id="add-cart">Thêm vào giỏ hàng</button>
+      <button id="Phone" class ="product-phone">Xem thêm</button>
       </div>
     </div>
 
