--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -9,14 +9,17 @@
     <link rel="stylesheet" href="../css/Home_header.css">
     <link rel="stylesheet" href="../css/Home_section_one.css">
     <link rel="stylesheet" href="../css/Home_section_two.css">
-    <script src="../javascript/Home.js"></script>
-    <script src="../javaScript/Home_pagination.js"></script>
+    <link rel="stylesheet" href="../css/Home_section_three.css">
+    <link rel="stylesheet" href="../css/Home_footer.css">
+    <script src="../javascript/Section_one_slide.js"></script>
+    <script src="../javaScript/Section_two_page.js"></script>
+    <script src="../javaScript/Section_two_productList.js"></script>
 </head>
 <body>
 
   <!-- header -->
-     <header class="navbar">
-   <div class="top-bar">
+  <header class="navbar">
+  <div class="top-bar">
       <div class="top-bar-content">
         <span>Xin chào mọi người tới với Thành Giang Shop</span>
         <span> | Sản phẩm Chính hãng - Uy tín- Chất lượng cao</span>
@@ -56,7 +59,7 @@
       </div>
 
       <!-- Login nút đăng nhập  -->
-       <a href="LoginClient.html"><button class="btn login">
+      <a href="LoginClient.html"><button class="btn login">
         <i class="fa fa-user"></i> Đăng nhập
       </button></a>
     </div>
@@ -107,126 +110,52 @@
     </div>
 
 
-    <div class="list-products">
-      <!-- 1 -->
-      <div class="product">
-        <div class="branch_product">Iphone</div>
-        <a href="">
-        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
-        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">
-          <div class="product-describe-button">6.9 inches</div>
-          <div class="product-describe-button">8 GB</div>
-          <div class="product-describe-button"> 156 GB</div>
-        </div>
-        <div class="product-desscribe-text">
-          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
-        </div>
-        <div class="product-price">33.990.000₫</div>
-      </a>
-      <button id="Phone" class ="product-phone">Mua ngay</button>
-      </div>
-<!-- 2 -->
-      <div class="product">
-        <div class="branch_product">Iphone</div>
-        <a href="">
-        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone-15-plus_1_.png" alt="sp1">
-        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">
-          <div class="product-describe-button">6.9 inches</div>
-          <div class="product-describe-button">8 GB</div>
-          <div class="product-describe-button"> 156 GB</div>
-        </div>
-        <div class="product-desscribe-text">
-          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
-        </div>
-        <div class="product-price">33.990.000₫</div>
-      </a>
-      <button id="Phone" class ="product-phone">Xem thêm</button>
-      </div>
+    <div class="list-products" id="list-products"></div>
 
-<!-- 3 -->
-      <div class="product">
-        <div class="branch_product">Iphone</div>
-        <a href="">
-        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone-17-pro-256-gb.png" alt="sp1">
-        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">
-          <div class="product-describe-button">6.9 inches</div>
-          <div class="product-describe-button">8 GB</div>
-          <div class="product-describe-button"> 156 GB</div>
-        </div>
-        <div class="product-desscribe-text">
-          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
-        </div>
-        <div class="product-price">33.990.000₫</div>
-      </a>
-      <button id="Phone" class ="product-phone">Xem thêm</button>
-      </div>
-<!-- 4 -->
-      <div class="product">
-        <div class="branch_product">Iphone</div>
-        <a href="">
-        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/s/a/samsung-galaxy-s25-fe-1.jpg" alt="sp1">
-        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">
-          <div class="product-describe-button">6.9 inches</div>
-          <div class="product-describe-button">8 GB</div>
-          <div class="product-describe-button"> 156 GB</div>
-        </div>
-        <div class="product-desscribe-text">
-          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
-        </div>
-        <div class="product-price">33.990.000₫</div>
-      </a>
-      <button id="Phone" class ="product-phone">Xem thêm</button>
-      </div>
-<!-- 5 -->
-      <div class="product">
-        <div class="branch_product">Iphone</div>
-        <a href="">
-        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
-        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">
-          <div class="product-describe-button">6.9 inches</div>
-          <div class="product-describe-button">8 GB</div>
-          <div class="product-describe-button"> 156 GB</div>
-        </div>
-        <div class="product-desscribe-text">
-          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
-        </div>
-        <div class="product-price">33.990.000₫</div>
-      </a>
-      <button id="Phone" class ="product-phone">Xem thêm</button>
-      </div>
-
-<!-- 6 -->
-    <div class="product">
-        <div class="branch_product">Iphone</div>
-        <a href="">
-        <img id="image_product" src="https://cdn2.cellphones.com.vn/insecure/rs:fill:358:358/q:90/plain/https://cellphones.com.vn/media/catalog/product/i/p/iphone_air.jpg" alt="sp1">
-        <div id="name_product" class="product-name">iPhone 15 Pro Max 512GB</div>
-        <div  class="product-describe">
-          <div class="product-describe-button">6.9 inches</div>
-          <div class="product-describe-button">8 GB</div>
-          <div class="product-describe-button"> 156 GB</div>
-        </div>
-        <div class="product-desscribe-text">
-          màn hình Super Retina XDR sắc nét, cùng nhiều tính năng công nghệ mới...
-        </div>
-        <div class="product-price">33.990.000₫</div>
-      </a>
-      <button id="Phone" class ="product-phone">Xem thêm</button>
-      </div>
+    <!-- phân trang -->
+    
+    <div class="pagination">
+      <button id="prev-page">&lt;</button>
+      <span id="page-numbers"></span>
+      <button id="next-page">&gt;</button>
     </div>
 
-    <div class="pagination">
-  <button id="prev-page">&lt;</button>
-  <span id="page-numbers"></span>
-  <button id="next-page">&gt;</button>
-</div>
 
-  </div>
+      <!-- section 3 -->
 
+      <div class="section-three">
+        <div class="section-three-content">
+          <div class="box">
+            <div class="box-Head"> Về Thành Giang Shop </div>
+            <a href="">Giới Thiệu Công Ty</a>
+            <a href="">Tuyển Dụng</a>
+            <a href="">Liên Hệ</a>
+        </div>
+          <div class="box">
+            <div class="box-Head"> Tổng Dài hỗ trợ miễn phí </div>
+            <div class="box-Body"> Tư Vấn-Mua Hàng : 999999999 (7h - 22h thứ 2-7)</div>
+            <div class="box-Body"> CSKH: 999999999 (8h - 21h hàng ngày)</div>
+          </div>
+          <div class="box">
+          <div class="box-Head"> Hỗ trợ khách hàng </div>
+          <a href="">Chính sách bảo hành</a>
+          <a href="">Chính sách đổi trả</a>
+          <a href="">Hướng dẫn mua hàng</a>
+          </div>
+        <div class="box">
+            <div class="box-Head"> Kết nối với chúng tôi </div>
+            <a href=""><i class="fa-brands fa-facebook"></i> Facebook</a>
+            <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
+            <a href=""><i class="fa-brands fa-tiktok"></i> Tiktok</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer">
+        <span>© 2025 Công ty TNHH Thành Giang Shop. GPDKKD: 123456789 do Sở KHĐT TP.Lào Cai cấp ngày 24/07/2025. Địa chỉ: Lào Cai. Điện thoại: 999999999. Email:ThanhGiang@gmial.com
+      </div>
+
+      
 </body>
 </html>
