--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -109,16 +109,27 @@
       </div>
     </div>
 
+    <div class="content">
+      <div class="filter">
+        <div class="filter-top">
+          Tìm kiếm nhanh điện thoại
+        </div>
+      </div>
+      <div class="list-products" id="list-products"></div>
+    </div>
 
-    <div class="list-products" id="list-products"></div>
-
-    <!-- phân trang -->
-    
     <div class="pagination">
       <button id="prev-page">&lt;</button>
       <span id="page-numbers"></span>
       <button id="next-page">&gt;</button>
     </div>
+
+
+
+
+
+  
+  
 
 
       <!-- section 3 -->
