--- a/FrontEnd/html/Phone.html
+++ b/FrontEnd/html/Phone.html
@@ -60,20 +60,7 @@
 
 <!-- section 1 -->
 <div class="section-one">
-<div class="section-one-content">
-    <div class="section-one-right">
-    <div class="slider-controls">
-        <button id="prev-slide" class="slider-btn"><i class="fa fa-chevron-left"></i></button>
-        <button id="next-slide" class="slider-btn"><i class="fa fa-chevron-right"></i></button>
-        </div>
-        <div class="list-slides">
-            <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_Home_iPhone_17_%20Pro_Opensale_v2.png" alt="iPhone 17">
-            <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/galaxy-s25-fe-home-0925.png" alt="Galaxy S25">
-            <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/app3-home.jpg" alt="AirPods Pro 3">
-            <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/690x300_Home_iPhone_17_%20Air_Opensale_v2.png" alt="Xiaomi 15T">
-            <img src="https://cdn2.cellphones.com.vn/insecure/rs:fill:690:300/q:90/plain/https://dashboard.cellphones.com.vn/storage/xiaomi-15t-5g-home-3.png" alt="Asus Vivobook">
-        </div>
-    </div>
+    <div id="Phone"></div>
 </div>
 </div>
 </body>
