them phan loc san pham

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -112,10 +112,87 @@
     <div class="content">
       <div class="filter">
         <div class="filter-top">
-          Tìm kiếm nhanh điện thoại
+          Tìm kiếm nhanh
+        </div>
+        <div class="filter-list">
+          <div class="filter-list-box"><i class="fa-solid fa-mobile-button"></i>Thương Hiệu
+            <div class="filter-list-box-menu2">
+              <ul>
+                <li>Apple</li>
+                <li>Samsung</li>
+                <li>Xiaomi</li>
+                <li>Vivo</li>
+                <li>Realme</li>
+                <li>Asus</li>
+                <li>Nokia</li>
+                <li>Nothing</li>
+              </ul>
+            </div>
+          </div>
+          <div class="filter-list-box"><i class="fa-solid fa-sack-dollar"></i>Mức Giá
+            <div class="filter-list-box-menu2">
+              <ul>
+                <li>Dưới 4 triệu</li>
+                <li>4 - 7 triệu</li>
+                <li>7 - 13 triệu</li>
+                <li>13 - 20 triệu</li>
+                <li>20 - 30 triệu</li>
+                <li>Trên 30 triệu</li>
+              </ul>
+            </div>
+          </div>
+          <div class="filter-list-box"><i class="fa-solid fa-microchip"></i>RAM
+            <div class="filter-list-box-menu2">
+              <ul>
+                <li>2 GB</li>
+                <li>3 GB</li>
+                <li>4 GB</li>
+                <li>6 GB</li>
+              </ul>
+            </div>
+          </div>
+          <div class="filter-list-box"><i class="fa-solid fa-sd-card"></i>Bộ Nhớ Trong
+            <div class="filter-list-box-menu2">
+              <ul>
+                <li>32 GB</li>
+                <li>64 GB</li>
+                <li>128 GB</li>
+                <li>256 GB</li>
+                <li>512 GB</li>
+                <li>1 TB</li>
+              </ul>
+            </div>
+          </div>
+          <div class="filter-list-box"> <i class="fa-solid fa-maximize"></i>Kích Thước
+            <div class="filter-list-box-menu2">
+              <ul>
+                <li>Dưới 5 inches</li>
+                <li>5 - 5.5 inches</li>
+                <li>5.5 - 6 inches</li>
+                <li>6 - 6.5 inches</li>
+                <li>Trên 6.5 inches</li>
+              </ul>
+            </div>
+          </div>
+          <div class="filter-list-box"><i class="fa-solid fa-palette"></i>Màu Sắc
+            <div class="filter-list-box-menu2">
+              <ul>
+                <li>Đen</li>
+                <li>Trắng</li>
+                <li>Vàng</li>
+                <li>Xanh Dương</li>
+                <li>Xanh Lá</li>
+                <li>Đỏ</li>
+                <li>Tím</li>
+                <li>Hồng</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="list-products" id="list-products"></div>
+      <div class="list-products" id="list-products">
+        
+      </div>
     </div>
 
     <div class="pagination">
@@ -125,12 +202,10 @@
     </div>
 
 
-
-
+  </div>
 
   
   
-
 
       <!-- section 3 -->
 
