them entity phone

--- a/FrontEnd/html/Home.html
+++ b/FrontEnd/html/Home.html
@@ -97,15 +97,15 @@
     <div class="top">
       <div class="top-content">ĐIỆN THOẠI NỔI BẬT</div>
       <div class="top-list">
-        <a href="">All</a>
-        <a href="">Apple</a>
-        <a href="">Samsung</a>
-        <a href="">Xiaomi</a>
-        <a href="">Vivo</a>
-        <a href="">Realme</a>
-        <a href="">Asus</a>
-        <a href="">Nokia</a>
-        <a href="">Nothing</a>
+        <div class="top-list-box">ALL</div>
+        <div class="top-list-box">IPHONE</div>
+        <div class="top-list-box">SAMSUNG</div>
+        <div class="top-list-box">OPPO</div>
+        <div class="top-list-box">VIVO</div>
+        <div class="top-list-box">REALME</div>
+        <div class="top-list-box">ASUS</div>
+        <div class="top-list-box">NOKIA</div>
+        <div class="top-list-box">NOTHING</div>
       </div>
     </div>
 
@@ -118,8 +118,9 @@
           <div class="filter-list-box"><i class="fa-solid fa-mobile-button"></i>Thương Hiệu
             <div class="filter-list-box-menu2">
               <ul>
-                <li>Apple</li>
+                <li>Iphone</li>
                 <li>Samsung</li>
+                <li>Oppo</li>
                 <li>Xiaomi</li>
                 <li>Vivo</li>
                 <li>Realme</li>
@@ -179,9 +180,8 @@
               <ul>
                 <li>Đen</li>
                 <li>Trắng</li>
-                <li>Vàng</li>
-                <li>Xanh Dương</li>
-                <li>Xanh Lá</li>
+                <li>Bạc</li>
+                <li>Xanh</li>
                 <li>Đỏ</li>
                 <li>Tím</li>
                 <li>Hồng</li>
